<resources>
    <string name="app_name">CityCrater</string>
    <string name="sign_up">sign up</string>
    <string name="or">or</string>
    <string name="log_in">Log in</string>
    <string name="origin">Origin:</string>
    <string name="origen">origen</string>
    <string name="destination">Destination:</string>
    <string name="destino">destino</string>
    <string name="search">Search</string>
    <string name="mapa">MAPA</string>
    <string name="registrar_hueco">REGISTRAR HUECO</string>
    <string name="location">Location:</string>
    <string name="ubicacion">ubicacion</string>
    <string name="size">Size:</string>
    <string name="plus">+</string>
    <string name="register">Register</string>
</resources>