<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity"
    android:padding="20dp"
    android:background="@color/backGreen">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/originLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/origin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/origin" />

            <TextView
                android:id="@+id/txtOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/origin"
                android:text="@string/origen" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/destinationLayout"
            android:layout_below="@+id/originLayout"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destination"
                android:layout_marginRight="20dp"/>

            <TextView
                android:id="@+id/txtDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destino"
                android:layout_toRightOf="@id/destination" />
        </RelativeLayout>



        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_below="@+id/destinationLayout"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/seaGreen"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/btnSearch">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapa">

            </TextView>
        </FrameLayout>

    </RelativeLayout>

</RelativeLayout>