<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterBumpActivity"
    android:padding="30dp"
    android:background="@color/backGreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginBottom="30dp"
            android:text="@string/registrar_hueco" />

        <RelativeLayout
            android:id="@+id/locationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/location" />

            <TextView
                android:id="@+id/txtUbicacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/location"
                android:text="@string/ubicacion" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/sizeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/locationLayout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/size" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/size"
                android:entries="@array/sizes"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/camLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sizeLayout"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/btnCamera"
                android:text="@string/plus" />

            <ImageButton
                android:id="@+id/btnCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnRegisterBump"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/camLayout"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/seaGreen"
            android:text="@string/register" />

    </LinearLayout>


</RelativeLayout>