<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:background="@color/backGreen">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@+id/imgLogo"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/seaGreen"/>

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:layout_below="@+id/btnSign"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_below="@+id/txtOr"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/seaGreen"/>

</RelativeLayout>